<resources>
    <string name="app_name">ToDo List</string>
    <string name="about1">To add a task, simply type in the text-field and press ADD.\nTo remove a task, simply tap on it.</string>
    <string name="about2">This app is currently in beta version, supports only up to max.8 tasks.</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="_3">3.</string>
    <string name="_2">2.</string>
    <string name="_1">1.</string>
    <string name="author">This app is made by #devashish</string>
    <string name="reminder_time">Reminder time:</string>
    <string name="about_">About :</string>
    <string name="export">Export</string>
    <string name="thank_you">Thank you for using this application!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Are you sure you want to close this app ?</string>
    <string name="task_added">Task successfully added :)</string>
    <string name="overflow_flow">Overflow error :(</string>
    <string name="completed"> completed!</string>
    <string name="thanks_permission">Thank you for granting the Permission :)</string>
    <string name="sorry_permission">Sorry, but we need Storage Permission for Exporting Files</string>
    <string name="request_permission">We need Storage Permission for Exporting Tasks</string>
    <string-array name="spinner_entries">
        <item>50</item>
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
    </string-array>
</resources>
